# web-game-framework

./: .gitignore  Cargo.toml  build.rs
examples/: chat.rs  schelling.rs
examples/chat_static/: index.html  page.js
examples/schelling_static/: index.html  page.js  style.css
examples/schelling_static/lists/: chatgpt_en.txt  chatgpt_fi.txt
protocol/: Cargo.toml
protocol/src/: game.rs  lib.rs  message.rs  player.rs
skullgame/: Cargo.toml
skullgame/src/: lib.rs  protocol.rs  rules.rs
src/: event_queue.rs  game_registry.rs  game_server.rs  game_state.rs  lib.rs  main.rs  message.rs  player.rs
static/: _old.html  index.html  main.js  page.js  qrcode.js  style.css  test.css  test.html
static/images/: licenses.txt
wasm/: Cargo.toml  README.md
wasm/src/: api.rs  lib.rs  storage.rs
wasm/src/html/: start.html
