[package]
name = "webskull-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.android]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
pretty_env_logger = "0.4"
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "BinaryType",
  "Blob",
  "Document",
  "Element",
  "ErrorEvent",
  "FileReader",
  "HtmlElement",
  "MessageEvent",
  "Node",
  "ProgressEvent",
  "WebSocket",
  "Window",
]


[dependencies.skullgame]
path = "../skullgame"
