[package]
name = "wgfw_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wgfw_protocol = { path = "../protocol" }

getrandom = { version = "*", features = ["js"] }
futures = "0.3.28"

serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
gloo-utils = { version = "0.1", features = ["serde"] }
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "Storage",
]
